fix: /users/login 파일 경로 수정

--- a/views/index.html
+++ b/views/index.html
@@ -23,7 +23,9 @@
           <input class="search-box" type="text" placeholder="클릭해서 검색" />
           <span class="material-symbols-outlined"> search </span>
         </div>
-        <span class="material-symbols-outlined"> person </span>
+        <a href="/users/login"
+          ><span class="material-symbols-outlined"> person </span></a
+        >
       </div>
     </div>
     <div class="slide"></div>
