--- a/views/user/login.html
+++ b/views/user/login.html
@@ -3,7 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Login</title>
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/user.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="window-wrapper">
+      <div class="window">
+        <div class="bold title">로그인</div>
+        <div class="input id">
+          <input type="text" placeholder="아이디를 입력해주세요" />
+        </div>
+        <div class="input password">
+          <input type="text" placeholder="아이디를 입력해주세요" />
+        </div>
+        <div class="button-wrapper">
+          <div class="sub-button signup">회원가입</div>
+          <div class="main-button login">로그인</div>
+        </div>
+        <div class="reset-password">
+          <div class="ask">비밀번호가 기억나지 않는다면?</div>
+          <div class="link">비밀번호 재설정</div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
