--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -5,8 +5,21 @@ body {
   font-size: 16px;
   color: #333;
   text-align: center;
+  box-sizing: content-box;
 }
-
+a {
+  text-decoration: none;
+  color: #333;
+}
+button {
+  border: none;
+  background-color: rgba(0, 0, 0, 0);
+  font-size: 24px;
+  cursor: pointer;
+}
+button:focus {
+  outline: none;
+}
 input {
   outline: none;
   border: none;
@@ -27,7 +40,12 @@ input {
 }
 .title {
   font-size: 32px;
-  margin: 64px 0;
+  padding: 64px 0;
+}
+.link {
+  text-decoration: underline;
+  cursor: pointer;
+  margin: 4px 0;
 }
 
 .big-book {
