--- a/views/user/reset.html
+++ b/views/user/reset.html
@@ -3,15 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login</title>
+    <title>Reset</title>
     <link rel="stylesheet" href="../css/index.css" />
     <link rel="stylesheet" href="../css/user.css" />
   </head>
   <body>
     <div class="content-wrapper">
       <div class="window">
-        <div class="bold title">로그인</div>
-        <form method="post" action="/users/login">
+        <div class="bold title">비밀번호 재설정</div>
+        <form method="post" action="/users/signup">
+          <div class="input">
+            <input
+              type="text"
+              name="userNickname"
+              placeholder="닉네임을 입력해주세요"
+            />
+          </div>
           <div class="input">
             <input
               type="text"
@@ -22,19 +29,16 @@
           <div class="input">
             <input
               type="password"
-              name="userPw"
-              placeholder="비밀번호를 입력해주세요"
+              name="targetPw"
+              placeholder="새로운 비밀번호를 입력해주세요"
             />
           </div>
           <div class="button-wrapper">
-            <a href="/users/signup" class="sub-button button">회원가입</a>
-            <button class="main-button button" type="submit">로그인</button>
+            <button class="main-button button" type="submit">
+              재설정 완료
+            </button>
           </div>
         </form>
-        <div class="reset-password">
-          <div class="ask">비밀번호가 기억나지 않는다면?</div>
-          <a href="/users/reset" class="link">비밀번호 재설정</a>
-        </div>
       </div>
     </div>
   </body>
