--- a/views/board/index.html
+++ b/views/board/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>board</title>
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="../css/index.css" />
+    <link rel="stylesheet" href="../css/board.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
@@ -41,50 +42,23 @@
         {%endif%}
       </div>
     </div>
-    <div class="slide"></div>
     <div class="content-wrapper">
       <div class="book-rank">
-        <div class="bold title">추천 도서</div>
-        <div class="flex-direction-row">
-          <div class="big-book">
-            <div class="big-book-image"></div>
-            <div class="book-title">{{bookListOrderByLikes[0].book_title}}</div>
-            <div class="book-summary">
-              {{bookListOrderByLikes[0].book_summary}}
-            </div>
-          </div>
+        <div class="bold title">공지사항</div>
+        <div class="flex-direction-column">
           <div class="flex-direction-column">
             <div class="flex-direction-row">
-              <div class="medium-book">
-                <div class="medium-book-image"></div>
-                <div class="book-title">
-                  {{bookListOrderByLikes[1].book_title}}
-                </div>
-              </div>
-              <div class="medium-book">
-                <div class="medium-book-image"></div>
-                <div class="book-title">
-                  {{bookListOrderByLikes[2].book_title}}
-                </div>
-              </div>
+              <div class="bold title">{{board_title}}</div>
             </div>
             <div class="flex-direction-row">
-              <div class="small-book">
-                <div class="small-book-image"></div>
-              </div>
-              <div class="small-book">
-                <div class="small-book-image"></div>
-              </div>
-              <div class="small-book">
-                <div class="small-book-image"></div>
-              </div>
-              <div class="small-book">
-                <div class="small-book-image"></div>
+              <div class="bold title">{{board_writer}}</div>
+              <div class="flex-direction-row">
+                <div>{{board_created_at}}</div>
+                <div>{{board_views}}</div>
               </div>
             </div>
           </div>
         </div>
-        <div class="sub-button show-more">모든 도서 보기</div>
       </div>
     </div>
   </body>
