fix: 로그인 화면 오류 해결

--- a/views/user/login.html
+++ b/views/user/login.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
       <div class="window">
         <div class="bold title">로그인</div>
-        <form method="post" action="/users/login">
+        <form class="flex-direction-column" method="post" action="/users/login">
           <div class="input">
             <input
               type="text"
