fix: user ui 에러 수정

--- a/views/user/auth.html
+++ b/views/user/auth.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
       <div class="window">
         <div class="bold title">회원정보</div>
-        <form method="post" action="/users/auth">
+        <form class="flex-direction-column" method="post" action="/users/auth">
           <div class="bold title">{{user_nickname}}</div>
           <div class="input">
             <input
