--- a/views/user/info.html
+++ b/views/user/info.html
@@ -11,7 +11,7 @@
     <div class="content-wrapper">
       <div class="window">
         <div class="bold title">회원정보</div>
-        <form method="post" action="/users/info">
+        <form class="flex-direction-column" method="post" action="/users/info">
           <div class="input">
             <input
               type="text"
