--- a/views/user/signup.html
+++ b/views/user/signup.html
@@ -11,7 +11,11 @@
     <div class="content-wrapper">
       <div class="window">
         <div class="bold title">회원가입</div>
-        <form method="post" action="/users/signup">
+        <form
+          class="flex-direction-column"
+          method="post"
+          action="/users/signup"
+        >
           <div class="input">
             <input
               type="text"
