fix: 모든 도서 보기 버튼 수정

--- a/views/index.html
+++ b/views/index.html
@@ -84,7 +84,9 @@
             </div>
           </div>
         </div>
-        <a href="books/list" class="sub-button show-more">모든 도서 보기</a>
+        <a href="books/list?page=1" class="sub-button show-more"
+          >모든 도서 보기</a
+        >
       </div>
       <div class="recent-updated">
         <div class="bold title">신간 도서</div>
@@ -108,7 +110,9 @@
             <div class="small-book-image"></div>
           </div>
         </div>
-        <a href="/books/list" class="sub-button show-more">모든 도서 보기</a>
+        <a href="/books/list?page=1" class="sub-button show-more"
+          >모든 도서 보기</a
+        >
       </div>
     </div>
   </body>
