--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -10,6 +10,9 @@ body {
 a {
   text-decoration: none;
   color: #333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 form {
   display: flex;
@@ -21,6 +24,9 @@ button {
   background-color: rgba(0, 0, 0, 0);
   font-size: 24px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 button:focus {
   outline: none;
@@ -29,6 +35,13 @@ input {
   outline: none;
   border: none;
 }
+textarea {
+  width: 904px;
+  height: auto;
+  border: none;
+  resize: none;
+}
+
 .input {
   display: flex;
   justify-content: center;
@@ -36,7 +49,6 @@ input {
   border: #ccc 1px solid;
   border-radius: 16px;
 }
-
 .material-symbols-outlined {
   cursor: pointer;
 }
@@ -110,7 +122,7 @@ input {
 
 .flex-direction-row {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   gap: 16px;
 }
 .flex-direction-column {
