/books/search location 설정

--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -86,7 +86,7 @@
   <script>
     function searchAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/search?search=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue;
 
       location.href = newAction;
     }
