--- a/views/index.html
+++ b/views/index.html
@@ -119,7 +119,7 @@
   <script>
     function changeAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/search?search=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue;
 
       location.href = newAction;
     }
