--- a/views/book/list.html
+++ b/views/book/list.html
@@ -90,7 +90,7 @@
   <script>
     function searchAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/search?search=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue;
 
       location.href = newAction;
     }
