--- a/views/public/css/book.css
+++ b/views/public/css/book.css
@@ -19,6 +19,27 @@
   height: 32px;
 }
 
+.write-book-title {
+  width: 552px;
+  font-size: 24px;
+  padding: 8px;
+}
+.write-book-category {
+  width: 304px;
+  font-size: 24px;
+  padding: 8px;
+}
+
 .write-book .write-bottom {
   justify-content: right;
+}
+
+.flex-direction-column .write-book-content-1 {
+  height: 64px;
+}
+.flex-direction-column .write-book-content-2 {
+  height: 240px;
+}
+.flex-direction-column .write-book-content-3 {
+  height: 128px;
 }
