--- a/views/public/css/index.css
+++ b/views/public/css/index.css
@@ -22,7 +22,6 @@ form {
 button {
   border: none;
   background-color: rgba(0, 0, 0, 0);
-  font-size: 24px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -42,6 +41,9 @@ textarea {
   resize: none;
   font-size: 24px;
   padding: 16px;
+}
+textarea:focus {
+  outline: none;
 }
 
 .input {
