--- a/views/public/css/book.css
+++ b/views/public/css/book.css
@@ -18,28 +18,38 @@
   width: 120px;
   height: 32px;
 }
+.write-button {
+  margin: 0;
+  width: 120px;
+  height: 32px;
+}
 
-.write-book-title {
+.book-title {
   width: 552px;
   font-size: 24px;
   padding: 8px;
 }
-.write-book-category {
+.book-category {
   width: 304px;
   font-size: 24px;
   padding: 8px;
 }
 
-.write-book .write-bottom {
+.flex-direction-column .book-content-1 {
+  height: 64px;
+}
+.flex-direction-column .book-content-2 {
+  height: 240px;
+}
+.flex-direction-column .book-content-3 {
+  height: 128px;
+}
+
+.flex-direction-column .book-bottom {
+  width: 904px;
   justify-content: right;
 }
 
-.flex-direction-column .write-book-content-1 {
-  height: 64px;
-}
-.flex-direction-column .write-book-content-2 {
-  height: 240px;
-}
-.flex-direction-column .write-book-content-3 {
-  height: 128px;
+.write-button {
+  margin-bottom: 64px;
 }
