--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>list</title>
+    <title>책 구성하기</title>
     <link rel="stylesheet" href="../../css/index.css" />
     <link rel="stylesheet" href="../../css/book.css" />
     <link
