--- a/views/board/index.html
+++ b/views/board/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <script defer src="js/index.js"></script>
   </head>
   <body>
     <div class="top-wrapper">
@@ -63,9 +62,9 @@
     </div>
   </body>
   <script>
-    function changeAction() {
+    function searchAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/books/search?bookSearch=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue + "&page=1";
 
       location.href = newAction;
     }
@@ -74,7 +73,7 @@
       .getElementById("search-form")
       .addEventListener("submit", function (event) {
         event.preventDefault();
-        changeAction();
+        searchAction();
       });
   </script>
 </html>
