--- a/views/book/toc/modify.html
+++ b/views/book/toc/modify.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
-    <script defer src="js/index.js"></script>
   </head>
   <body>
     <div class="top-wrapper">
@@ -48,7 +47,7 @@
         <form
           class="flex-direction-column"
           method="post"
-          action="/books/toc/modify"
+          action="/books/toc/modify?bookId={{book_uid}}"
         >
           <div class="flex-direction-column">
             <div class="flex-direction-row book-content-1">
@@ -86,7 +85,7 @@
   <script>
     function searchAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/books/search?bookSearch=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue + "&page=1";
 
       location.href = newAction;
     }
