--- a/views/index.html
+++ b/views/index.html
@@ -117,9 +117,9 @@
     </div>
   </body>
   <script>
-    function changeAction() {
+    function searchAction() {
       const inputValue = document.getElementById("search-input").value;
-      const newAction = "/books/search?bookSearch=" + inputValue;
+      const newAction = "/books/search?bookSearch=" + inputValue + "&page=1";
 
       location.href = newAction;
     }
@@ -128,7 +128,7 @@
       .getElementById("search-form")
       .addEventListener("submit", function (event) {
         event.preventDefault();
-        changeAction();
+        searchAction();
       });
   </script>
 </html>
