fix: button ui 수정

--- a/views/book/list.html
+++ b/views/book/list.html
@@ -81,7 +81,9 @@
               />
             </form>
           </div>
-          <a href="/books/toc/write" class="main-button new-book">새 책 쓰기</a>
+          <a href="/books/toc/write" class="main-button confirm-button"
+            >새 책 쓰기</a
+          >
         </div>
       </div>
     </div>
