--- a/views/book/toc/modify.html
+++ b/views/book/toc/modify.html
@@ -73,8 +73,8 @@
 {{book_summary}}</textarea
             >
           </div>
-          <div class="flex-direction-row book-bottom">
-            <a class="main-button write-button" type="submit"
+          <div class="flex-direction-row bottom-wrapper">
+            <a class="main-button confirm-button" type="submit"
               ><button>수정완료</button></a
             >
           </div>
