--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -79,8 +79,8 @@
               placeholder="요약을 입력해주세요"
             ></textarea>
           </div>
-          <div class="flex-direction-row book-bottom">
-            <a class="main-button write-button" type="submit"
+          <div class="flex-direction-row bottom-wrapper">
+            <a class="main-button confirm-button" type="submit"
               ><button>작성 완료</button></a
             >
           </div>
