--- a/views/book/toc/view.html
+++ b/views/book/toc/view.html
@@ -63,11 +63,15 @@
           <div class="book-content-1">요약</div>
           <div class="book-content-3">{{book_summary}}</div>
         </div>
-        <div class="flex-direction-row write-bottom">
-          <a href="/books/toc/modify?bookId={{book_uid}}" class="main-button"
+        <div class="flex-direction-row bottom-wrapper">
+          <a
+            href="/books/toc/modify?bookId={{book_uid}}"
+            class="main-button confirm-button"
             >목차 수정하기</a
           >
-          <a href="/books/delete?bookId={{book_uid}}" class="main-button"
+          <a
+            href="/books/delete?bookId={{book_uid}}"
+            class="main-button confirm-button"
             >책 삭제하기</a
           >
         </div>
