--- a/views/book/page/view.html
+++ b/views/book/page/view.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>목차</title>
+    <title>내용</title>
     <link rel="stylesheet" href="../../css/index.css" />
     <link rel="stylesheet" href="../../css/book.css" />
     <link
