fix: text ui 수정

--- a/views/book/list.html
+++ b/views/book/list.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="content-wrapper">
-      <div class="all-books">
+      <div class="book-wrapper">
         <div class="bold title">모든 도서</div>
         <div class="flex-direction-row tags">
           {%for tag in bookCategoryCount%}
