--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="content-wrapper">
-      <div class="write-book">
+      <div class="book-wrapper">
         <div class="bold title">책 구성하기</div>
         <form
           class="flex-direction-column"
