--- a/views/book/page/view.html
+++ b/views/book/page/view.html
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="content-wrapper">
-      <div class="read-book">
+      <div class="book-wrapper">
         <div class="bold title">{{book_title}}</div>
         <div class="flex-direction-column">
           <div class="book-content-1">{{toc_title}}</div>
