--- a/views/book/toc/write.html
+++ b/views/book/toc/write.html
@@ -10,6 +10,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
     />
+    <script defer src="../../js/index.js"></script>
   </head>
   <body>
     <div class="top-wrapper">
@@ -88,19 +89,4 @@
       </div>
     </div>
   </body>
-  <script>
-    function searchAction() {
-      const inputValue = document.getElementById("search-input").value;
-      const newAction = "/books/search?bookSearch=" + inputValue + "&page=1";
-
-      location.href = newAction;
-    }
-
-    document
-      .getElementById("search-form")
-      .addEventListener("submit", function (event) {
-        event.preventDefault();
-        searchAction();
-      });
-  </script>
 </html>
