--- a/views/book/toc/view.html
+++ b/views/book/toc/view.html
@@ -45,8 +45,8 @@
     <div class="content-wrapper">
       <div class="book-wrapper">
         <div class="flex-direction-row title">
-          <div class="bold title">{{book_title}}</div>
-          <div class="bold title">{{book_category}}</div>
+          <div class="bold book-title">{{book_title}}</div>
+          <div class="bold book-category">{{book_category}}</div>
         </div>
         <div class="flex-direction-column">
           <div class="book-content-1">목차</div>
