--- a/views/book/page/view.html
+++ b/views/book/page/view.html
@@ -46,7 +46,10 @@
       <div class="book-wrapper">
         <div class="bold title">{{book_title}}</div>
         <div class="flex-direction-column">
-          <div class="book-content-1">{{toc_title}}</div>
+          <div class="flex-direction-row">
+            <div class="book-title book-content-1">{{toc_title}}</div>
+            <div class="book-category book-content-1"></div>
+          </div>
           <div class="book-content-2">{{toc_content}}</div>
         </div>
         <div class="flex-direction-row bottom-wrapper">
