--- a/views/public/css/book.css
+++ b/views/public/css/book.css
@@ -1,6 +1,6 @@
 .book-wrapper .title {
   text-align: left;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .book-wrapper .list-bottom {
   justify-content: space-around;
@@ -15,14 +15,26 @@
   padding: 8px;
 }
 
-.book-title {
+input.book-title {
   width: 552px;
   font-size: 24px;
   padding: 8px;
 }
-.book-category {
+input.book-category {
   width: 304px;
   font-size: 24px;
+  padding: 8px;
+}
+div.book-title {
+  width: 552px;
+  font-size: 24px;
+  text-align: left;
+  padding: 8px;
+}
+div.book-category {
+  width: 304px;
+  font-size: 24px;
+  text-align: center;
   padding: 8px;
 }
 
@@ -32,20 +44,27 @@
   height: 64px;
 }
 .flex-direction-column .book-content-2 {
+  width: 872px;
   font-size: 24px;
   min-height: 240px;
 }
 .book-content-2 .flex-direction-row {
-  width: 904px;
+  width: 872px;
   justify-content: left;
   align-items: left;
   text-align: left;
 }
 .flex-direction-column .book-content-3 {
+  width: 872px;
   height: 128px;
 }
 
 .bottom-wrapper {
+  width: 904px;
+  justify-content: right;
+  margin-bottom: 64px;
+}
+div.flex-direction-row.bottom-wrapper {
   width: 904px;
   justify-content: right;
   margin-bottom: 64px;
