fix: 공지사항 링크 수정

--- a/views/board/index.html
+++ b/views/board/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="top-right">
-        <a href="/boards" class="board">공지사항</a>
+        <a href="/boards?page=1" class="board">공지사항</a>
         <div class="input search">
           <form id="search-form" method="get" action="/search">
             <input id="search-input" type="text" placeholder="클릭해서 검색" />
@@ -42,7 +42,7 @@
       </div>
     </div>
     <div class="content-wrapper">
-      <div class="book-rank">
+      <div class="book-wrapper">
         <div class="bold title">공지사항</div>
         <div class="flex-direction-column">
           <div class="flex-direction-column">
