--- a/views/index.html
+++ b/views/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
       <div class="top-right">
-        <a href="/boards" class="board">공지사항</a>
+        <a href="/boards?page=1" class="board">공지사항</a>
         <div class="input search">
           <form id="search-form" method="get" action="/search">
             <input id="search-input" type="text" placeholder="클릭해서 검색" />
